# arviz-stats

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  INVESTIGATION_SUMMARY.md  README.md  docstub.toml  metrics.py  pyproject.toml  tox.ini
.github/workflows/: lint.yml  post-release.yml  publish.yml  rtd-preview.yml  test.yml
arviz_env/: pyvenv.cfg
docs/source/: array_stats_only.ipynb  background.md  conf.py  index.md  overview.ipynb
docs/source/_templates/: name.html
docs/source/api/: index.md
docs/source/contributing/: testing.md
src/: sampling_diagnostics.py
src/arviz_stats/: __init__.py  __init__.pyi  _version.py  _version.pyi  accessors.py  accessors.pyi  bayes_factor.py  bayes_factor.pyi  ecdf_utils.py  ecdf_utils.pyi  helper_loo.py  helper_stats.py  helper_stats.pyi  lala.qmd  loo.py  manipulation.py  manipulation.pyi  metrics.py  metrics.pyi  psens.py  psense.py  psense.pyi  regression.py  sampling_diagnostics.py  sampling_diagnostics.pyi  summary.py  summary.pyi  survival.py  survival.pyi  utils.py  utils.pyi  validate.py  validate.pyi  visualization.py  visualization.pyi
src/arviz_stats/base/: __init__.py  __init__.pyi  array.py  array.pyi  circular_utils.py  circular_utils.pyi  core.py  core.pyi  dataarray.py  dataarray.pyi  density.py  density.pyi  density_utils.py  diagnostics.py  diagnostics.pyi  intervals.py  khat.py  pareto.py  stats.py  stats_refitting.py  stats_utils.py  stats_utils.pyi
src/arviz_stats/loo/: __init__.py  __init__.pyi  compare.py  compare.pyi  helper_lfo_cv.py  helper_loo.py  helper_loo.pyi  helper_loo_kfold.py  helper_loo_kfold.pyi  lfo_cv.py  lfo_cv_helper.py  loo.py  loo.pyi  loo_approximate_posterior.py  loo_approximate_posterior.pyi  loo_expectations.py  loo_expectations.pyi  loo_helper.py  loo_influence.py  loo_influence.pyi  loo_kfold.py  loo_kfold.pyi  loo_kfold_helper.py  loo_kfold_helper.pyi  loo_moment_match.py  loo_moment_match.pyi  loo_moment_match_helper.py  loo_moment_match_helper.pyi  loo_pit.py  loo_pit.pyi  loo_score.py  (+8 more)
tests/: __init__.py  conftest.py  helpers.py  test_accessors.py  test_bayes_factor.py  test_ecdf_utils.py  test_helper_loo.py  test_helper_loo_kfold.py  test_helper_stats.py  test_kwargs_validation.py  test_loo.py  test_loo_kfold.py  test_loo_mm_roaches.py  test_manipulation.py  test_metrics.py  test_minimal.py  test_psense.py  test_regression.py  test_reloo.py  test_sampling_diagnostics.py  test_summary.py  test_survival.py  test_uniformity.py  test_utils.py  test_validate.py  univariate_normal.nc
tests/base/: __init__.py  test_array.py  test_circular_utils.py  test_core.py  test_density.py  test_diagnostics.py  test_stats.py  test_stats_utils.py
tests/loo/: __init__.py  test_compare.py  test_helper_kfold.py  test_helper_lfo_cv.py  test_helper_loo.py  test_lfo_cv.py  test_lfo_cv_helper.py  test_loo.py  test_loo_ap.py  test_loo_expectations.py  test_loo_helper.py  test_loo_influence.py  test_loo_kfold.py  test_loo_kfold_helper.py  test_loo_mm.py  test_loo_moment_matching_helpers.py  test_loo_pit.py  test_loo_score.py  test_loo_subsample.py  test_loo_subsample_helpers.py  test_reloo.py
tests/numba/: __init__.py  test_array.py  test_diagnostics.py  test_intervals.py
(+10 files in other folders)
